--- a/themes/silver_perfection/css/styles.css
+++ b/themes/silver_perfection/css/styles.css
@@ -2,7 +2,7 @@
 body {text-align: center; background-image: url(../img/bgnoise.png); background-repeat: repeat-xy; color: white !important;}
 body a {text-decoration: none;}
 div.body {clear:both; width: 960px; min-height: 600px; 
-background-color: #FFFFFF; margin: auto; -moz-border-radius: 15px; border-radius: 15px; margin-bottom: 15px; color: black !important;}
+background-color: #FFFFFF; margin: auto; border-radius: 15px; margin-bottom: 15px; color: black !important;}
 div.padfix {padding-left: 10px;
 padding-right: 10px;}
 div.body a {color: black;}
@@ -26,23 +26,4 @@ margin-bottom: 0px !important;
 	width: 40px;
 	height: 40px;
 	
-}
-/* Some nice tweaks for Webkit */
-::-webkit-scrollbar {
-    width: 10px;
-}
-::-webkit-scrollbar-track {
-    background: #FFF;
-    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.1);
-}
-::-webkit-scrollbar-thumb {
-    background: #CCC;
-    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.2);
-}
-::-webkit-scrollbar-thumb:hover {
-    background: #AAA;
-}
-::-webkit-scrollbar-thumb:active {
-    background: #888;
-    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.3);
 }
