--- a/themes/silver_perfection/css/styles.css
+++ b/themes/silver_perfection/css/styles.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-body {text-align: center; background-image: url(../img/bgnoise.png); background-repeat: repeat-xy; color: white !important;}
+body {text-align: center; background-color: rgb(255, 255, 255); background-repeat: repeat-xy; color: white !important;}
 body a {text-decoration: none;}
 div.body {clear:both; width: 960px; min-height: 600px; 
 background-color: #FFFFFF; margin: auto; border-radius: 15px; margin-bottom: 15px; color: black !important;}
@@ -8,11 +8,13 @@ padding-right: 10px;}
 div.body a {color: black;}
 div.content {padding: 10px 10px 10px 10px; overflow: auto;}
 div.break {height: 50px;}
-div.tpanel{
+div.tpanel {
 position: fixed;
 width: 100%;
 z-index: 10;
 }
+div.footer {background-color: rgb(0, 0, 0); height: 100px;}
+div.header {width: 100%; min-height: 300px; text-align: left; padding-left: 10px; padding-top: 50px; background: url("../img/circle.png") no-repeat scroll center top / 1600px auto transparent;}
 .navbar{
 margin-bottom: 0px !important; 
 }
