--- a/admin/styles.css
+++ b/admin/styles.css
@@ -6,18 +6,41 @@ border-radius: 15px;
 margin: auto;
 text-align: center;	
 }
+
 div.admin{
-min-height: 400px;
+height: 800px;
 width: 960px;
+overflow-y: hidden;
 background-color: rgb(231, 231, 231);
-border-radius: 15px;
-margin: auto;
-}
-div.padfix{
 padding-left: 10px;
 padding-right: 10px;
 }
+
 div.msg_wrap{
-overflow: scroll;
+overflow-y: scroll;
 height: 300px;
+}
+
+div.left_menu{
+background-color: black;
+width: 150px;
+height: 800px;
+float: left;
+}
+
+h3 a{
+color: white;
+}
+
+#active{
+background-color: rgb(231, 231, 231);
+}
+
+#active a{
+color: black;
+background-color: rgb(231, 231, 231);
+}
+
+#active a:hover{
+color: black;
 }
