--- a/themes/silver_perfection/css/styles.css
+++ b/themes/silver_perfection/css/styles.css
@@ -43,7 +43,7 @@ background: url("../img/circle.png") no-repeat scroll center top / 1600px auto t
 }
 div.content {padding: 10px 10px 10px 10px; overflow: auto;}
 div.tpanel {position: fixed; width: 100%; z-index: 10;}
-div.footer {background-color: rgb(0, 0, 0); height: 100px; width: 100%;}
+div.footer {background-color: rgb(0, 0, 0); height: 120px; width: 100%; color: rgb(255, 255, 255);}
 .scrollup {
 	display:none;
 	text-decoration:none;
